--- a/chatrooms/templates/chatrooms/chatrooms.html
+++ b/chatrooms/templates/chatrooms/chatrooms.html
@@ -4,9 +4,13 @@
 {% block content %}
     <div class="container-fluid">
         <div class="row">
-            {% for c in chatrooms %}
+            {% for chatroom in chatrooms %}
                 <div class="col-4">
-                    {{ c }}
+                    {% for i in chatroom.comment.all %}
+                        {{ i.content }}
+                        {{ i.user }}
+                        {{ i.date }}
+                    {% endfor %}
                 </div>
             {% endfor %}
 
