Style chatroom page and display chatrooms

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,10 +11,11 @@
         </div>
         <div class="row">
             <div class="col">
-                <button class="btn rounded">Chat Rooms</button>
-                <button class="btn rounded">Login or Register</button>
-                <button class="btn rounded">About us</button>
-                <button class="btn rounded">links</button>
+                <a href="{% url 'chatrooms' %}" class="btn rounded">Chat Rooms</a>
+                <a href="#" class="btn rounded">Login or Register</a>
+                <a href="#" class="btn rounded">About us</a>
+                <a href="#" class="btn rounded">links</a>
+
             </div>
         </div>
     </div>
