--- a/chatrooms/templates/chatrooms/chatrooms.html
+++ b/chatrooms/templates/chatrooms/chatrooms.html
@@ -2,18 +2,22 @@
 {% load static %}
 
 {% block content %}
-    <div class="container-fluid">
-        <div class="row">
+    <div class="container-fluid my-4">
+        <div class="row text-center">
             {% for chatroom in chatrooms %}
-                <div class="col-4">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <h3 class="text-info">{{ chatroom.name }}</h3>
+                    <h4>{{ chatroom.subject }}</h4>
                     {% for i in chatroom.comment.all %}
-                        {{ i.content }}
-                        {{ i.user }}
-                        {{ i.date }}
+                        <p>
+                            {{ i.user }} <br>
+                            {{ i.content }}
+                        </p>
+                        <small class="text-muted">{{ i.date }}</small>
+
                     {% endfor %}
                 </div>
             {% endfor %}
-
         </div>
     </div>
 {% endblock %}
