--- a/chatrooms/templates/chatrooms/chatrooms.html
+++ b/chatrooms/templates/chatrooms/chatrooms.html
@@ -3,6 +3,11 @@
 
 {% block content %}
     <div class="container-fluid my-4">
+        <div class="row">
+            <div class="col-2 offset-9">
+                <button class="btn btn-info" type="button" data-toggle="modal" data-target="#myModal">Open a new chatroom</button>
+            </div>
+        </div>
         <div class="row text-center">
             {% for chatroom in chatrooms %}
                 <div class="col-12 col-md-6 col-lg-4">
@@ -14,10 +19,31 @@
                             {{ i.content }}
                         </p>
                         <small class="text-muted">{{ i.date }}</small>
-
                     {% endfor %}
                 </div>
             {% endfor %}
         </div>
+        <div class="modal" tabindex="-1" role="dialog" id="myModal">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Open a chatroom</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                    <form action="{% url 'chatrooms' %}" method="POST" id="chatroom-form">
+                            {% csrf_token %}
+                            {{ add_chatroom_form | crispy }}
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Discard</button>
+                </div>
+              </div>
+            </div>
+          </div>
     </div>
 {% endblock %}
