--- a/chatrooms/templates/chatrooms/chatrooms.html
+++ b/chatrooms/templates/chatrooms/chatrooms.html
@@ -3,14 +3,14 @@
 
 {% block content %}
     <div class="container-fluid my-4">
-        <div class="row">
+        <div class="row mb-5">
             <div class="col-2 offset-9">
-                <button class="btn btn-info" type="button" data-toggle="modal" data-target="#myModal">Open a new chatroom</button>
+                <button class="btn btn-success" type="button" data-toggle="modal" data-target="#myModal">Open a new chatroom</button>
             </div>
         </div>
-        <div class="row text-center">
+        <div class="row text-center mt-5">
             {% for chatroom in chatrooms %}
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4 my-5">
                     <h3 class="text-info">{{ chatroom.name }}</h3>
                     <h4>{{ chatroom.subject }}</h4>
                     {% for i in chatroom.comment.all %}
@@ -38,9 +38,9 @@
                             {{ add_chatroom_form | crispy }}
                         </div>
                         <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-dark">Submit</button>
                     </form>
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Discard</button>
+                  <button type="button" class="btn btn-danger" data-dismiss="modal">Discard</button>
                 </div>
               </div>
             </div>
