--- a/templates/base.html
+++ b/templates/base.html
@@ -32,11 +32,11 @@
 
         {% block corejs %}
             <script src="https://kit.fontawesome.com/a5ee39e432.js" crossorigin="anonymous"></script>
-            <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js"
                 integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" 
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
                 integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" 
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
                 integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
         {% endblock %}
 
@@ -74,7 +74,7 @@
         <nav class="site-nav navbar navbar-expand-md navbar-light px-5">
             <div class="container">
 
-            <a class="logo navbar-brand" href="#">Connect With</a>
+            <a class="logo navbar-brand" href="{% url 'home' %}">Connect With</a>
             <button
                 class="navbar-toggler"
                 type="button"
@@ -124,6 +124,13 @@
             <script>
                 // Display toasts messages
                 $('.toast').toast('show');
+            </script>
+            <script>
+                "To Stop Form Resubmission On Page Refresh"
+                "taken from (https://www.webtrickshome.com/forum/how-to-stop-form-resubmission-on-page-refresh#:~:text=One%20way%20to%20stop%20page,if%20the%20form%20is%20empty.)"
+                if ( window.history.replaceState ) {
+                  window.history.replaceState( null, null, window.location.href );
+                }
             </script>
         {% endblock %}
     </body>
