--- a/chatrooms/templates/chatrooms/chatrooms.html
+++ b/chatrooms/templates/chatrooms/chatrooms.html
@@ -2,48 +2,61 @@
 {% load static %}
 
 {% block content %}
-    <div class="container-fluid my-4">
-        <div class="row">
-            <div class="col-2 offset-9">
-                <button class="btn btn-info" type="button" data-toggle="modal" data-target="#myModal">Open a new chatroom</button>
-            </div>
+<div class="container-fluid my-4">
+    <div class="row my-5">
+        <div class="col-2 offset-9">
+            <button class="btn btn-success" type="button" data-toggle="modal" data-target="#myModal">Open a new chatroom
+            </button>
         </div>
-        <div class="row text-center">
-            {% for chatroom in chatrooms %}
-                <div class="col-12 col-md-6 col-lg-4">
-                    <h3 class="text-info">{{ chatroom.name }}</h3>
-                    <h4>{{ chatroom.subject }}</h4>
-                    {% for i in chatroom.comment.all %}
-                        <p>
-                            {{ i.user }} <br>
-                            {{ i.content }}
-                        </p>
-                        <small class="text-muted">{{ i.date }}</small>
-                    {% endfor %}
-                </div>
-            {% endfor %}
-        </div>
-        <div class="modal" tabindex="-1" role="dialog" id="myModal">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
+    </div>
+    <div class="modal" tabindex="-1" role="dialog" id="myModal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title">Open a chatroom</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
+                    <h5 class="modal-title">Open a chatroom</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body">
                     <form action="{% url 'chatrooms' %}" method="POST" id="chatroom-form">
-                            {% csrf_token %}
-                            {{ add_chatroom_form | crispy }}
-                        </div>
-                        <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Discard</button>
+                        {% csrf_token %}
+                        {{ add_chatroom_form | crispy }}
                 </div>
-              </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Discard</button>
+                </div>
             </div>
-          </div>
+        </div>
     </div>
+
+
+
+
+
+
+
+
+
+    <div class="row">
+        <div class="col">
+            <div class="card-group row">
+                {% for chatroom in chatrooms %}
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4>{{ chatroom.name }}</h4>
+                            <p class="card-text">{{ chatroom.subject }}</p>
+                            <p class="card-text"><small class="text-muted">Created : {{ chatroom.date_created }}</small></p>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+
+        </div>
+    </div>
+</div>
 {% endblock %}
