--- a/chatrooms/templates/chatrooms/chatroom_detail.html
+++ b/chatrooms/templates/chatrooms/chatroom_detail.html
@@ -17,6 +17,25 @@
                 deserunt mollit anim id est laborum.
             </p>
         </div>
+        {% for i in chatroom.comment.all %}
+            <div class="col-10 offset-1 border bg-light p-4 mt-2">
+                <p>
+                    {{ i.user }} <br>
+                    {{ i.content }}
+                </p>
+                <small class="text-muted">{{ i.date }}</small>
+            </div>
+        {% endfor %}
+    </div>
+
+    <div class="row">
+        <div class="col-10 offset-1 px-0 my-4">
+            <form action="{% url 'chatroom_detail' chatroom.chatroom_id %}" method="POST">
+                {% csrf_token %}
+                {{ add_comment_form | crispy }}
+                <button class="btn btn-success" type="submit">Send</button>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock %}
