Add style to chatrooms and chatrooms detail page, add fontawsome link

--- a/chatrooms/templates/chatrooms/chatroom_detail.html
+++ b/chatrooms/templates/chatrooms/chatroom_detail.html
@@ -5,10 +5,7 @@
 <div class="container-fluid my-4">
     <div class="row">
         <div class="col-10 offset-1 border text-center">
-            <h4 class="text-center py-3 text-info">
-                Chatroom : {{ chatroom.name }}
-            </h4>
-            <hr class="w-50">
+            <h3 class="text-center py-3 text-info">{{ chatroom.name }}</h3>
             <p>{{ chatroom.subject }}
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
@@ -20,7 +17,7 @@
         {% for i in chatroom.comment.all %}
             <div class="col-10 offset-1 border bg-light p-4 mt-2">
                 <p>
-                    {{ i.user }} <br>
+                    <i class="fa-solid fa-user"></i> {{ i.user }} <br>
                     {{ i.content }}
                 </p>
                 <small class="text-muted">{{ i.date }}</small>
@@ -38,4 +35,14 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+
+{% block postloadjs %}
+    <script>
+        // Prevents resubmission of forms on page refresh
+        if ( window.history.replaceState ) {
+          window.history.replaceState( null, null, window.location.href );
+        }
+    </script>
 {% endblock %}
