Add style to chatrooms and chatroom detail page

--- a/chatrooms/templates/chatrooms/chatroom_detail.html
+++ b/chatrooms/templates/chatrooms/chatroom_detail.html
@@ -4,23 +4,18 @@
 {% block content %}
 <div class="container-fluid my-4">
     <div class="row">
-        <div class="col-10 offset-1 border text-center">
-            <h3 class="text-center py-3 text-info">{{ chatroom.name }}</h3>
-            <p>{{ chatroom.subject }}
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.
-            </p>
+        <div class="col-10 offset-1 border text-center bg-info rounded">
+            <h3 class="text-center black py-3">{{ chatroom.name }}</h3>
+            <p>{{ chatroom.subject }}</p>
         </div>
         {% for i in chatroom.comment.all %}
-            <div class="col-10 offset-1 border bg-light p-4 mt-2">
+            <div class="col-10 offset-1 border bg-light p-4 mt-4 rounded">
                 <p>
                     <i class="fa-solid fa-user"></i> {{ i.user }} <br>
+                    <small class="text-muted">{{ i.date }}</small>
+                    <hr>
                     {{ i.content }}
                 </p>
-                <small class="text-muted">{{ i.date }}</small>
             </div>
         {% endfor %}
     </div>
