--- a/chatrooms/templates/chatrooms/chatrooms.html
+++ b/chatrooms/templates/chatrooms/chatrooms.html
@@ -39,10 +39,12 @@
             <div class="card-group row">
                 {% for chatroom in chatrooms %}
                 <div class="col-12 col-md-6 col-lg-4 my-3 chatroom-link">
-                    <div class="card">
+                    <div class="card rounded">
                         <a href="{% url 'chatroom_detail' chatroom.chatroom_id %}"></a>
+                        <div class="card-header bg-info">
+                            <h4 class="text-center">{{ chatroom.name }}</h4>
+                        </div>
                         <div class="card-body">
-                            <h4>{{ chatroom.name }}</h4>
                             <p class="card-text">{{ chatroom.subject|slice:"40" }}...</p>
                             <p class="card-text"><small class="text-muted">Created : {{ chatroom.date_created }}</small></p>
                         </div>
