--- a/static/css/base.css
+++ b/static/css/base.css
@@ -144,6 +144,10 @@ a:focus {
     background-color: #f2f2f2;
 }
 
+.bg-info{
+    background-color: #8ab4c2 !important;
+}
+
 /* --------------------------------------- Toasts messages */
 
 .message-container {
