--- a/chatrooms/templates/chatrooms/chatrooms.html
+++ b/chatrooms/templates/chatrooms/chatrooms.html
@@ -60,6 +60,7 @@
 
 
 {% block postloadjs %}
+{{ block.super }}
     <script>
         "Makes the entire chatroom cards clickable"
         $(".chatroom-link").click(function () {
@@ -67,12 +68,4 @@
             return false;
         });
     </script>
-
-    <script>
-        // Prevents resubmission of forms on page refresh
-        if ( window.history.replaceState ) {
-          window.history.replaceState( null, null, window.location.href );
-        }
-    </script>
-
 {% endblock %}
