--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -109,7 +109,7 @@
             <div class="card-overflow event-img">
               <div class="event-img-wrapper">
                 <div class="card-style event-img-position img-style">
-                  <img src="{% static 'images/rainbow.jpeg' %}" alt="rainbow with historic building" />
+                  <img src="{% static 'images/rainbow.jpg' %}" alt="rainbow with historic building" />
                 </div>
               </div>
             </div>
