--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                 rel="stylesheet">
             <!-- styles and favicon -->
             <link rel="stylesheet" href="{% static 'css/base.css' %}">
-            <link rel="shortcut icon" type="image/jpg" href="{% static 'images/favicon.ico' %}" />
+            <link rel="shortcut icon" type="image/jpg" href="{% static 'images/favicon-32x32.png' %}" />
             <script src="https://kit.fontawesome.com/09f433170b.js" crossorigin="anonymous"></script>
         {% endblock %}
 
