--- a/chatrooms/templates/chatrooms/chatroom_detail.html
+++ b/chatrooms/templates/chatrooms/chatroom_detail.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 <div class="container-fluid my-4">
+
     <div class="row">
         <!-- back to chatroom button -->
         <div class="position-fixed">
@@ -15,26 +16,42 @@
             <h3 class="text-center black py-3">{{ chatroom.name }}</h3>
             <p>{{ chatroom.subject }}</p>
         </div>
-        {% for i in chatroom.comment.all %}
-            <div class="col-8 offset-2 border bg-light p-4 mt-4 rounded">
-                <p>
-                    <i class="fa-solid fa-user"></i> {{ i.user }} <br>
-                    <small class="text-muted">{{ i.date }}</small>
-                    <hr>
-                    {{ i.content }}
-                </p>
-            </div>
-        {% endfor %}
-    </div>
 
-    <div class="row">
-        <div class="col-8 offset-2 px-0 my-4">
-            <form action="{% url 'chatroom_detail' chatroom.chatroom_id %}" method="POST">
-                {% csrf_token %}
-                {{ add_comment_form | crispy }}
-                <button class="btn btn-success" type="submit">Send</button>
-            </form>
+        {% if request.user.is_authenticated %}
+        <div class="col-12">
+            <div class="row">
+                <div class="col-8 offset-2 px-0 my-4">
+                    <form action="{% url 'chatroom_detail' chatroom.chatroom_id %}" method="POST">
+                        {% csrf_token %}
+                        {{ add_comment_form | crispy }}
+                        <button class="btn btn-success" type="submit">Send</button>
+                    </form>
+                </div>
+            </div>
         </div>
+        {% else %}
+        <p class="text-center py-3">
+            Please <a class="text-info" href="{% url 'account_login' %}" aria-label="Link to log in page.">Login</a> or
+            <a class="text-info" href="{% url 'account_signup' %}"
+                aria-label="Link to create an account page.">Register</a>
+            to participate in the discussions.
+        </p>
+        {% endif %}
+
+
+        {% for comment in comments %}
+        <div class="col-8 offset-2 border bg-light p-4 mt-4 rounded">
+            <p>
+                <i class="fa-solid fa-user"></i> {{ comment.user }} <br>
+                <small class="text-muted">{{ comment.date }}</small>
+                <hr>
+                {{ comment.content }}
+            </p>
+        </div>
+        {% endfor %}
+
+
     </div>
 </div>
+
 {% endblock %}
