--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -43,19 +43,15 @@
 
 <!-- Events -->
 <div class="container-fluid mb-5">
-    <div class="row">
-        <div class="col-md-3 align-self-center justify-content-center text-center">
+    <div class="row mt-5">
+        <div class="col-md-3 align-self-center justify-content-center text-center mt-5">
             <div class="row">
                 <div class="col-12">
-                    <h2>Upcoming<br />Events</h2>
+                    <h3 class="heading">Upcoming<br />Events</h3>
                 </div>
             </div>
         </div>
         <div class="col-md-9">
-
-
-
-
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
