--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -9,8 +9,8 @@
 
 <p class="mx-auto text-center mt-3">{% trans 'Are you sure you want to sign out?' %}</p>
 <p class="mx-auto text-center mt-3">
-  <a class="btn rounded p-2 bg-brown m-2" href="{% url 'chatrooms' %}" aria-label="Link to the chatroom page.">back to chatrooms</a>
-  <a class="btn rounded p-2 bg-brown m-2" href="{% url 'home' %}" aria-label="Link to the chatroom page.">back to home</a>
+  <a class="btn rounded p-2 btn-success m-2" href="{% url 'chatrooms' %}" aria-label="Link to the chatroom page.">back to chatrooms</a>
+  <a class="btn rounded p-2 btn-success m-2" href="{% url 'home' %}" aria-label="Link to the chatroom page.">back to home</a>
 </p>
 <form class="text-center" method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
