--- a/chatrooms/templates/chatrooms/chatroom_detail.html
+++ b/chatrooms/templates/chatrooms/chatroom_detail.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block extra_title %}- {{ chatroom.name }}{% endblock %}
+
 {% block content %}
 <div class="container-fluid my-4">
 
