--- a/chatrooms/templates/chatrooms/chatrooms.html
+++ b/chatrooms/templates/chatrooms/chatrooms.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block extra_title %}- chatrooms{% endblock %}
+
 {% block content %}
 <div class="container-fluid my-4">
     <div class="row my-5">
