--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -9,15 +9,15 @@
 
 <p class="mx-auto text-center mt-3">{% trans 'Are you sure you want to sign out?' %}</p>
 <p class="mx-auto text-center mt-3">
-  <a class="btn rounded p-2 btn-success m-2" href="{% url 'chatrooms' %}" aria-label="Link to the chatroom page.">back to chatrooms</a>
-  <a class="btn rounded p-2 btn-success m-2" href="{% url 'home' %}" aria-label="Link to the chatroom page.">back to home</a>
+  <a class="btn rounded btn-success offwhite m-2 p-2" href="{% url 'chatrooms' %}" aria-label="Link to the chatroom page.">back to chatrooms</a>
+  <a class="btn rounded btn-success offwhite m-2 p-2" href="{% url 'home' %}" aria-label="Link to the chatroom page.">back to home</a>
 </p>
 <form class="text-center" method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button class="mt-3" type="submit">{% trans 'Sign Out' %}</button>
+  <button class="mt-3 p-2" type="submit">{% trans 'Sign Out' %}</button>
 </form>
 
 {% endblock %}
