Add media folder to host images and update profile page and model

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -7,7 +7,43 @@
 <div class="container-fluid my-4">
     <div class="row">
         <div class="col">
-            <h2>Profile</h2>
+            <h2>{{ request.user.username }}'s profile</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4">
+            {% if user_profile.image %}
+                <a href="{{ user_profile.image.url }}" target="_blank" aria-label="Link to view the profile picture.">
+                    <img class="img-fluid" src="{{ user_profile.image.url }}" alt="profile picture">
+                </a>
+            {% else %}
+                <img class="img-fluid" src=" {{ MEDIA_URL }}default-image.png" alt="default profile picture">
+            {% endif %}
+            <form action="" method="" id="make-profile-public-form">
+                <div class="ml-4">
+                    <input class="form-check-input" type="checkbox" id="make-profile-public-chekbox" name="make-profile-public-chekbox">
+                    <label class="form-check-label" for="make-profile-public-chekbox">
+                        make profile public
+                    </label>
+                </div>
+            </form>
+        </div>
+        <div class="col-8">
+            <p>Username: {{ request.user.username}}</p>
+            <p>Email: {{ request.user.email}}</p>
+            <p>
+                About me:<br/>
+                {% if user_profile.about %}
+                    {{ user_profile.about }}
+                {% else %}
+                    <span class="text-muted">Tell us who you are ...</span>
+                {% endif %}
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <h3>Favorites</h3>
         </div>
     </div>
 </div>
