--- a/static/css/base.css
+++ b/static/css/base.css
@@ -41,7 +41,7 @@ h3 {
     font-weight: 400;
 }
 
-/* --------------------------Buttons */
+/* ---------- Buttons */
 .btn,
 button,
 a {
@@ -370,6 +370,55 @@ event-title {
     border-radius: 50%;
 }
 
+.edit-profile-btn {
+    position: absolute;
+    top: -12px;
+    right: -12px;
+}
+
+/* image select button */
+
+.select-image-btn {
+    background-color: #28a745;
+    color: white;
+    border: #28a745;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 3px;
+}
+
+.select-image-btn:hover,
+.select-image-btn:active,
+.select-image-btn:focus {
+    background-color: #228f3b;
+
+    -webkit-box-shadow: 0 6px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.5);
+}
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+.btn-file input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.custom-checkbox .custom-control-label::before {
+    border-color: #dc3545;
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+    background-color: #dc3545;
+    border-color: #dc3545;
+}
 
 
 /*------------------------------------Media */
